Fix comment on image discussion icon alignment
Fix https://gitlab.com/gitlab-org/gitlab-ce/issues/39608

Use SVG icons to avoid having to position things
See https://gitlab.com/gitlab-org/gitlab-ce/issues/39608#note_50088917

--- a/app/assets/stylesheets/framework/variables.scss
+++ b/app/assets/stylesheets/framework/variables.scss
@@ -722,7 +722,7 @@ $issuable-warning-icon-margin: 4px;
 Image Commenting cursor
 */
 $image-comment-cursor-left-offset: 12;
-$image-comment-cursor-top-offset: 30;
+$image-comment-cursor-top-offset: 12;
 
 /*
 Popup
